<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <TextView 
	android:text="@string/benutzername" 
	android:id="@+id/textView1" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">
	</TextView>
	
    <EditText
        android:id="@+id/benutzername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
     <TextView 
	android:text="@string/passwort" 
	android:id="@+id/textView1" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">
	</TextView>
	
    <EditText
        android:id="@+id/passwort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrieren" />

</LinearLayout>
